--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,24 +1,47 @@
-version: 1.0.{build}
-branches:
-  only:
-  - master
-skip_non_tags: true
-image: WMF 5
-environment:
-  NuGetApiKey:
-    secure: PEApyZDcz+aPFMACztd9kMC279hQAHvm9GLZq4CaL2+0v9bnd2xIidHmxV86/EmO
-install:
-- ps: . .\AppVeyor\Install.ps1
-build:
-  verbosity: minimal
-test_script:
-- ps: . .\AppVeyor\Test.ps1
-deploy_script:
-- ps: . .\AppVeyor\Deploy.ps1
-notifications:
-- provider: Email
-  to:
-  - buildNotification.clijsters@gmail.com
-  on_build_success: true
-  on_build_failure: true
-  on_build_status_changed: true
+-
+  branches:
+    only:
+    - master
+  version: 1.0.{build}
+  configuration: Release
+  skip_non_tags: true
+  image: WMF 5
+  environment:
+    NuGetApiKey:
+      secure: PEApyZDcz+aPFMACztd9kMC279hQAHvm9GLZq4CaL2+0v9bnd2xIidHmxV86/EmO
+  install:
+  - ps: . .\AppVeyor\Install.ps1
+  build:
+    verbosity: minimal
+  test_script:
+  - ps: . .\AppVeyor\Test.ps1
+  deploy_script:
+  - ps: . .\AppVeyor\Deploy.ps1
+  notifications:
+  - provider: Email
+    to:
+    - buildNotification.clijsters@gmail.com
+    on_build_success: true
+    on_build_failure: true
+    on_build_status_changed: true
+-
+  branches:
+    only:
+    - develop
+  version: 1.0.{build}
+  configuration: Debug
+  skip_non_tags: true
+  image: WMF 5
+  install:
+  - ps: . .\AppVeyor\Install.ps1
+  build:
+    verbosity: minimal
+  test_script:
+  - ps: . .\AppVeyor\Test.ps1
+  notifications:
+  - provider: Email
+    to:
+    - buildNotification.clijsters@gmail.com
+    on_build_success: true
+    on_build_failure: true
+    on_build_status_changed: true
