Remove need for tags to automatically build commits on develop

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,7 @@
     - develop
   version: 0.1.{build}
   configuration: Debug
-  skip_non_tags: true
+  skip_non_tags: false
   image: WMF 5
   install:
   - ps: . .\AppVeyor\Install.ps1
